# nntp-tools

./: .bzrignore  .dir-locals.el  .gitignore  .travis.yml  Article.cc  Article.h  CHANGES.html  CHANGES.md  COPYING.sorttable  Group.cc  Group.h  Makefile.am  README  README.md  acinclude.m4  autogen.sh  bzr2news.1  bzr2news.c  configure.ac  cpputils.cc  cpputils.h  dist  getdelim.c  getline.c  lj2news.1  lj2news.c  lj2news.h  nntp.c  nntp.h  open_memstream.c  prepare  spoolstats.1  spoolstats.cc  timezones.cc  timezones.h  tla2news.1  tla2news.c  utils.c  utils.h
ChangeLog.d/: lj2news--mainline--0  newstools--mainline--0
debian/: Makefile.am  README.Debian.spoolstats  changelog  conffiles.rjk-spoolstats  control  copyright  override.rjk-nntp-tools  override.rjk-spoolstats  rules
docker/debian12/: Dockerfile  build
gateways/: Makefile.am  bzr2news.1  bzr2news.c  git2news.1  lj2news.1  lj2news.c  setup-lj2news  setup-lj2news.1  tla2news.1  tla2news.c
graph/: Graph.cc  Graph.h  Makefile.am  TimeGraph.cc  TimeGraph.h  t.cc
inn/: Makefile.am  find-unhistorical.1  inn-includes.h  unhistorical.c
lib/: Bytes.cc  Escape.cc  HTML.h  Header.cc  Makefile.am  Quote.cc  Timezones.cc  Timezones.h  capture.c  case.cc  compact_kilo.cc  cpputils.h  error.c  error.h  getdelim.c  getline.c  io.c  io.h  listdir.h  nntp.c  nntp.h  open_memstream.c  parse_csv.cc  parse_date.cc  popenvp.c  read_file.cc  recode.c  round_kilo.cc  seen-t.c  seen.c  seen.h  sorttable.c  split.cc  thead.cc  timezones.cc  timezones.h  utils.c  utils.h  write_file.cc
scripts/: detect-conversations  dist  dr-death  group-graph  htmlman
sources/: Makefile.am  news-sources.1  sources.cc
spoolstats/: AllGroups.cc  AllGroups.h  Article.cc  Article.h  ArticleProperty.cc  ArticleProperty.h  Bucket.cc  Bucket.h  Conf.cc  Conf.h  Config.cc  Config.h  Group.cc  Group.h  Hierarchy.cc  Hierarchy.h  Makefile.am  SenderCountingBucket.cc  SenderCountingBucket.h  User.cc  User.h  css.c  sorttable.c  sorttable.js  spoolstats.1  spoolstats.cc  spoolstats.cron  spoolstats.css  spoolstats.default  spoolstats.h
