#
# Copyright (C) 2010 Richard Kettlewell
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
# USA
#

noinst_LIBRARIES=libmisc.a libmiscpp.a
libmisc_a_SOURCES=getdelim.c getline.c nntp.c open_memstream.c utils.c	\
nntp.h utils.h
libmiscpp_a_SOURCES=cpputils.h split.cc Bytes.cc Timezones.h		\
Timezones.cc Bytes.cc HTML.h Escape.cc Quote.cc Header.cc case.cc	\
parse_date.cc parse_csv.cc compact_kilo.cc
